--- a/sketches/curse-krypton/style.css
+++ b/sketches/curse-krypton/style.css
@@ -3,7 +3,8 @@ html, body {
   padding: 0;
 }
 canvas {
-  margin-right: auto;
-  margin-left: auto;
-  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
 }
