--- a/sketches/curse-krypton/style.css
+++ b/sketches/curse-krypton/style.css
@@ -3,8 +3,5 @@ html, body {
   padding: 0;
 }
 canvas {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); 
+  display: block;
 }
