--- a/sketches/curse-krypton/style.css
+++ b/sketches/curse-krypton/style.css
@@ -1,14 +1,14 @@
 html, body {
   background-color: #222; 
-  max-width: 800px; 
+  width: 800px;
+  height: 800px; 
   color: #fff; 
-  margin: 40px auto; 
-  padding: 0 10px;
-}
+  margin: 40px; 
+  padding: 0 10px;}
 canvas {
   align-content:center;
   align-items:center;
   align-self:center;
-  max-width: 600px;
-  max-height: 600px;
+  width: 800px;
+  height: 800px;
   display: block;}
