--- a/sketches/curse-krypton/style.css
+++ b/sketches/curse-krypton/style.css
@@ -4,11 +4,11 @@ html, body {
   height: 800px; 
   color: #fff; 
   margin: auto; 
-  padding: 0 10px;}
+  padding: 0 10px;
+}
 canvas {
-  align-content: center;
-  align-items: center;
-  align-self: center;
+  margin: auto;
   width: 800px;
   height: 800px;
-  display: block;}
+  display: block;
+}
