--- a/gbg/2/style.css
+++ b/gbg/2/style.css
@@ -4,6 +4,7 @@
   font-weight: 400;
 }
 html, body {
+  background-color: #222; 
   margin: 0;
   padding: 0;
   font-family: 'Roboto Mono', monospace; 
